--- a/be/package.json
+++ b/be/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "async-validator": "^1.8.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
