improve user register & login

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.3.0",
+    "koa2-cors": "^2.0.5",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.0-rc2"
   }
