--- a/be/package.json
+++ b/be/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "async-validator": "^1.8.2",
     "autoprefixer": "^7.1.2",
+    "axios": "^0.17.1",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
