--- a/be/package.json
+++ b/be/package.json
@@ -62,6 +62,7 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "showdown": "^1.8.6",
     "simplemde": "^1.11.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
