--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "koa-router": "^7.3.0",
     "koa2-cors": "^2.0.5",
     "mongodb": "^3.0.1",
-    "mongoose": "^5.0.0-rc2"
+    "mongoose": "^5.0.0-rc2",
+    "qiniu": "^7.1.2"
   }
 }
