--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,13 @@
   "description": "操作系统为`ubuntu 16.04 LTS`。",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=dev node app.js",
+    "prod": "cross-env NODE_ENV=prod node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^5.1.3",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
