--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "操作系统为`ubuntu 16.04 LTS`。",
   "main": "app.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=dev node app.js",
+    "dev": "cross-env NODE_ENV=dev nodemon app.js",
     "prod": "cross-env NODE_ENV=prod node app.js"
   },
   "author": "",
@@ -20,6 +20,7 @@
     "log4js": "^2.5.2",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.0-rc2",
+    "nodemon": "^1.14.12",
     "qiniu": "^7.1.2"
   }
 }
