--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^5.1.3",
+    "jsonwebtoken": "^8.1.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
+    "koa-jwt": "^3.3.0",
     "koa-logger": "^3.1.0",
     "koa-morgan": "^1.0.1",
     "koa-router": "^7.3.0",
