be: add ownspace server: update user controller

--- a/be/package.json
+++ b/be/package.json
@@ -47,6 +47,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
+    "jwt-decode": "^2.2.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.7.2",
