--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "koa-router": "^7.3.0",
     "koa2-cors": "^2.0.5",
     "log4js": "^2.5.2",
+    "marked": "^0.3.15",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.0-rc2",
     "nodemon": "^1.14.12",
