--- a/fe/package.json
+++ b/fe/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zeit/next-sass": "^0.1.1",
     "axios": "^0.18.0",
+    "highlightjs": "^9.10.0",
     "koa": "^2.5.0",
     "koa-router": "^7.4.0",
     "next": "^5.0.0",
