--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.1.1",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
+    "koa-is-json": "^1.0.0",
     "koa-jwt": "^3.3.0",
     "koa-logger": "^3.1.0",
     "koa-morgan": "^1.0.1",
