--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "koa2-cors": "^2.0.5",
     "log4js": "^2.5.2",
     "marked": "^0.3.15",
+    "markedtoc": "^1.2.0",
+    "mime-types": "^2.1.18",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.0-rc2",
     "nodemailer": "^4.6.0",
