--- a/fe/package.json
+++ b/fe/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "PORT=3006 next start",
-    "deploy": "npm build && npm start",
-    "pm2": "NODE_ENV=production pm2 start server.js"
+    "start": "next start",
+    "pm2": "NODE_ENV=production npm run build && pm2 start pm2.conf.json --watch"
   },
   "keywords": [],
   "author": "",
