--- a/fe/package.json
+++ b/fe/package.json
@@ -7,7 +7,7 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "next start",
-    "pm2": "NODE_ENV=production npm run build && pm2 start pm2.conf.json --watch"
+    "pm2": "npm run build && NODE_ENV=production pm2 start pm2.conf.json --watch"
   },
   "keywords": [],
   "author": "",
