--- a/fe/package.json
+++ b/fe/package.json
@@ -21,6 +21,7 @@
     "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.7.2",
+    "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
