FE: fix package.json

--- a/fe/package.json
+++ b/fe/package.json
@@ -24,6 +24,7 @@
     "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fastclick": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-swipe": "^5.1.1",
     "react-tabs": "^2.2.1",
