--- a/server-2.0.0/package.json
+++ b/server-2.0.0/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "cross-env": "^5.1.4",
+    "highlight.js": "^9.12.0",
+    "jsonwebtoken": "^8.2.0",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-jwt": "^3.3.1",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.5",
+    "marked": "^0.3.17",
     "mongoose": "^5.0.10",
     "nodemon": "^1.17.2",
     "qiniu": "^7.1.3"
