--- a/server-2.0.0/package.json
+++ b/server-2.0.0/package.json
@@ -8,6 +8,7 @@
     "prod": "cross-env NODE_ENV=production node app.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "cross-env": "^5.1.4",
     "highlight.js": "^9.12.0",
     "jsonwebtoken": "^8.2.0",
