--- a/fe/package.json
+++ b/fe/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@zeit/next-sass": "^0.1.1",
     "axios": "^0.18.0",
+    "gitalk": "^1.2.2",
     "highlightjs": "^9.10.0",
     "koa": "^2.5.0",
     "koa-router": "^7.4.0",
