--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "marked": "^0.3.17",
     "mongoose": "^5.0.10",
     "nodemon": "^1.17.2",
+    "pinyin": "^2.8.3",
     "qiniu": "^7.1.3"
   }
 }
