--- a/fe/package.json
+++ b/fe/package.json
@@ -19,6 +19,7 @@
     "highlightjs": "^9.10.0",
     "koa": "^2.5.0",
     "koa-router": "^7.4.0",
+    "material-ui": "^0.20.1",
     "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
     "node-sass": "^4.7.2",
