modified:   packages/client/pages/index.module.scss 	modified:   packages/client/pages/index.tsx

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ ADMIN_PASSWD=admin
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
-DB_PASSWD=root
+DB_PASSWD=123456
 DB_DATABASE=wipi
 
 # Github 第三方登录配置
